--- a/Talkative/Source/Pages/RegisterPage.xaml
+++ b/Talkative/Source/Pages/RegisterPage.xaml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Talkative.Source.Pages.MainPage"
-             Title="MainPage"
-              xmlns:prism="http://prismlibrary.com"
-             prism:ViewModelLocator.AutowireViewModel="Automatic">
+             x:Class="Talkative.Source.Pages.RegisterPage"
+             Title="RegisterPage"
+             xmlns:prism="http://prismlibrary.com"
+             prism:ViewModelLocator.AutowireViewModel="Automatic"
+             >
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
