--- a/Talkative/Source/Pages/RegisterPage.xaml
+++ b/Talkative/Source/Pages/RegisterPage.xaml
@@ -5,11 +5,114 @@
              Title="RegisterPage"
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="Automatic"
+    
              >
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <ContentPage.Content>
+        <StackLayout
+        HorizontalOptions="FillAndExpand"
+        VerticalOptions="FillAndExpand"
+        BackgroundColor="WhiteSmoke"
+       >
+            <StackLayout
+                 HorizontalOptions="Start"
+                  VerticalOptions="Start">
+                <ImageButton
+                    Margin="0,20,0,0"
+                    CornerRadius="30"
+                    WidthRequest="45"
+                    HeightRequest="45"
+                    Source="arrow.png"
+                    AbsoluteLayout.LayoutBounds="0.5,0.1"
+                    AbsoluteLayout.LayoutFlags="PositionProportional"
+                    Command="{Binding goBack}"></ImageButton>
+            </StackLayout>
+
+            <AbsoluteLayout
+                 HorizontalOptions="FillAndExpand"
+                VerticalOptions="FillAndExpand"
+                BackgroundColor="WhiteSmoke"
+                
+                >
+                
+               
+                
+                <Image Source="rectangle1.png"
+
+                    AbsoluteLayout.LayoutBounds="0,1"
+                    AbsoluteLayout.LayoutFlags="PositionProportional"
+                    >
+                </Image>
+                <Image Source="rectangle2.png"
+
+                    AbsoluteLayout.LayoutBounds="1,-0.25"
+                    AbsoluteLayout.LayoutFlags="PositionProportional"
+                    >
+                </Image>
+                <StackLayout
+                      HorizontalOptions="FillAndExpand"
+                VerticalOptions="FillAndExpand"
+                    AbsoluteLayout.LayoutBounds="0.5,0.6"
+                    AbsoluteLayout.LayoutFlags="PositionProportional">
+
+
+                    <Label
+                    Text="Kayıt Ol"
+                    FontSize="40"
+                    FontAttributes="Bold"
+                    FontFamily="Inter-ExtraBold"
+                     VerticalOptions="Start"
+                   
+                    ></Label>
+                    <Line BackgroundColor="#E056FD"
+                      WidthRequest="200"
+                      HeightRequest="5"
+                      HorizontalOptions="Start"
+                      ></Line>
+                    <Entry
+                    Placeholder="E-Mail"
+                    Margin="0,10,0,0"
+                    FontSize="20"
+                    FontAttributes="Bold"
+                    FontFamily="Inter-ExtraBold"
+                    >
+                        <!--Texte binding yap-->
+                    </Entry>
+                    <Line BackgroundColor="Black"
+                      WidthRequest="300"
+                      HeightRequest="2"
+                     
+                      ></Line>
+                    <Entry
+                    Placeholder="Şifre"
+                    IsPassword="True"
+                    Margin="0,10,0,0"
+                    FontSize="20"
+                    FontAttributes="Bold"
+                    FontFamily="Inter-ExtraBold"
+                   >
+                        <!--Texte binding yap-->
+                    </Entry>
+                    <Line BackgroundColor="Black"
+                      WidthRequest="300"
+                      HeightRequest="2"
+                      ></Line>
+                    <Button
+                    Margin="0,20,0,0"
+                    Text="Kayıt Ol"
+                    TextColor="WhiteSmoke"
+                    FontSize="20"
+                    FontAttributes="Bold"
+                    FontFamily="Inter-ExtraBold" 
+                    CornerRadius="30"
+                    BackgroundColor="#130F40"></Button>
+                </StackLayout>
+
+
+
+            </AbsoluteLayout>
+
+
+        </StackLayout>
+
+    </ContentPage.Content>
 </ContentPage>
