--- a/Talkative/Source/Pages/RegisterPage.xaml
+++ b/Talkative/Source/Pages/RegisterPage.xaml
@@ -61,6 +61,7 @@
                     FontAttributes="Bold"
                     FontFamily="Inter-ExtraBold"
                      VerticalOptions="Start"
+                        TextColor="Black"
                    
                     ></Label>
                     <Line BackgroundColor="#E056FD"
