--- a/Talkative/Source/Pages/RegisterPage.xaml
+++ b/Talkative/Source/Pages/RegisterPage.xaml
@@ -69,12 +69,15 @@
                       HeightRequest="5"
                       HorizontalOptions="Start"
                       ></Line>
+                    
+                    
                     <Entry
                     Placeholder="E-Mail"
                     Margin="0,10,0,0"
                     FontSize="20"
                     FontAttributes="Bold"
                     FontFamily="Inter-ExtraBold"
+                        Text="{Binding PEmail}"
                     >
                         <!--Texte binding yap-->
                     </Entry>
@@ -83,6 +86,7 @@
                       HeightRequest="2"
                      
                       ></Line>
+                    
                     <Entry
                     Placeholder="Şifre"
                     IsPassword="True"
@@ -90,6 +94,7 @@
                     FontSize="20"
                     FontAttributes="Bold"
                     FontFamily="Inter-ExtraBold"
+                        Text="{Binding Ppassword}"
                    >
                         <!--Texte binding yap-->
                     </Entry>
@@ -97,6 +102,25 @@
                       WidthRequest="300"
                       HeightRequest="2"
                       ></Line>
+                    
+                    
+                    
+                    <Entry
+                    Placeholder="Şifre-Tekrar"
+                    IsPassword="True"
+                    Margin="0,10,0,0"
+                    FontSize="20"
+                    FontAttributes="Bold"
+                    FontFamily="Inter-ExtraBold"
+                        Text="{Binding Repassword}"
+                   >
+                        <!--Texte binding yap-->
+                    </Entry>
+                    <Line BackgroundColor="Black"
+                      WidthRequest="300"
+                      HeightRequest="2"
+                      ></Line>
+                    
                     <Button
                     Margin="0,20,0,0"
                     Text="Kayıt Ol"
@@ -105,7 +129,8 @@
                     FontAttributes="Bold"
                     FontFamily="Inter-ExtraBold" 
                     CornerRadius="30"
-                    BackgroundColor="#130F40"></Button>
+                    BackgroundColor="#130F40"
+                        Command="{Binding RegisterCommand}"></Button>
                 </StackLayout>
 
 
