--- a/Talkative/Source/Pages/GroupsPage.xaml
+++ b/Talkative/Source/Pages/GroupsPage.xaml
@@ -1,14 +1,159 @@
 <?xml version="1.0" encoding="utf-8" ?>
+    
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Talkative.Source.Pages.GroupsPage"
              Title="GroupsPage"
               xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="Automatic">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    
+    <ContentPage.Content>
+
+       
+
+
+        <StackLayout>
+
+
+
+            <StackLayout
+               
+                Orientation="Horizontal"
+                BackgroundColor="#686DE0"
+                VerticalOptions="Start"
+                
+               >
+
+                <Image
+                        Source="home.png"
+                          WidthRequest="30"
+                          HeightRequest="30"
+                         HorizontalOptions="Start"
+                         Margin="10,10,10,10"
+                        >
+                </Image>
+                <Label
+                        Text="ANA SAYFA"
+                        HorizontalOptions="Start"
+                        VerticalOptions="Center"
+                        Margin="40,0,0,0"
+                        FontFamily="Inter-ExtraBold"
+                        FontSize="Large"
+                        TextColor="WhiteSmoke"></Label>
+
+
+            </StackLayout>
+            <StackLayout >
+                <StackLayout
+                    Margin="20,10,20,10">
+                    <StackLayout>
+                        <Frame
+                            BackgroundColor="#D9D9D9"
+                            CornerRadius="100"
+                            >
+                            <CollectionView 
+                                             ItemsLayout="HorizontalList"
+                                             ItemsSource="{Binding gg}"
+                             
+                                             HeightRequest="30"
+                                            >
+                                <CollectionView.ItemTemplate>
+                                    <DataTemplate 
+                                    >
+
+
+                                        <StackLayout
+                                       VerticalOptions="Center"
+                                        HorizontalOptions="Start"
+                                       >
+                                            <Label Text="test" Margin="5,0,0,0" FontSize="20"
+                                                          ></Label>
+                                        </StackLayout>
+
+
+
+                                    </DataTemplate>
+                                </CollectionView.ItemTemplate>
+                            </CollectionView>
+
+                        </Frame>
+                        <StackLayout Orientation="Horizontal" >
+                        <ImageButton Source="test.png" HeightRequest="30" WidthRequest="30"></ImageButton>
+                        <ImageButton Source="polygon1.png" HeightRequest="20" WidthRequest="20" Margin="320,0,0,0"></ImageButton>
+                        </StackLayout>
+                    </StackLayout>
+                </StackLayout>
+
+            </StackLayout>
+            <StackLayout>
+                <Label Text="Kelime Grupları" HorizontalOptions="Start" FontFamily="Inter-ExtraBold" FontSize="28" Margin="5,0,0,0"></Label>
+            </StackLayout>
+
+           
+
+            <ScrollView 
+                       VerticalScrollBarVisibility="Always"
+                        
+                        
+                        >
+                
+
+              
+                    
+                    <CollectionView 
+                                     ItemsLayout="VerticalGrid, 3"
+                                     ItemsSource="{Binding gg}"
+                                    
+                                 
+                                     >
+                        
+
+                        <CollectionView.Behaviors>
+                            
+                            
+                           <!--Behavior yazılacak-->
+
+                        </CollectionView.Behaviors>
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate >
+
+                            <Frame BackgroundColor="#D9D9D9"
+                                         WidthRequest="100"
+                                           Margin="0,18,0,0"
+                                           CornerRadius="25">
+                                        <StackLayout
+                                            >
+                                            <Image Source="rectangle1.png" WidthRequest="40" HeightRequest="40" ></Image>
+                                            <Label Text="test" Margin="18,0,0,0"></Label>
+
+                                        </StackLayout>
+
+                                    </Frame>
+                             
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+
+             
+            </ScrollView>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </StackLayout>
+        
+    </ContentPage.Content>
+ 
 </ContentPage>
+
+    
