--- a/Talkative/Source/Pages/RegisterPage.xaml
+++ b/Talkative/Source/Pages/RegisterPage.xaml
@@ -4,6 +4,7 @@
              x:Class="Talkative.Source.Pages.RegisterPage"
              Title="RegisterPage"
              xmlns:prism="http://prismlibrary.com"
+             Shell.NavBarIsVisible="False"
              prism:ViewModelLocator.AutowireViewModel="Automatic"
     
              >
@@ -51,7 +52,7 @@
                 <StackLayout
                       HorizontalOptions="FillAndExpand"
                 VerticalOptions="FillAndExpand"
-                    AbsoluteLayout.LayoutBounds="0.5,0.6"
+                    AbsoluteLayout.LayoutBounds="0.5,0.5"
                     AbsoluteLayout.LayoutFlags="PositionProportional">
 
 
