--- a/Talkative/Source/Pages/GroupsPage.xaml
+++ b/Talkative/Source/Pages/GroupsPage.xaml
@@ -36,55 +36,79 @@
                         Text="ANA SAYFA"
                         HorizontalOptions="Start"
                         VerticalOptions="Center"
-                        Margin="40,0,0,0"
+                        Margin="10,0,0,0"
                         FontFamily="Inter-ExtraBold"
                         FontSize="Large"
-                        TextColor="WhiteSmoke"></Label>
+                        TextColor="WhiteSmoke">
+                    
+                </Label>
+              
+                <Button
+                    Text="Grup Ekle"
+                    HeightRequest="40"
+                    CornerRadius="100"
+                    HorizontalOptions="EndAndExpand"
+                    Command="{Binding GoGroupCreatePage}">
+                    
+                </Button>
+
 
 
             </StackLayout>
-            <StackLayout >
-                <StackLayout
-                    Margin="20,10,20,10">
-                    <StackLayout>
+            
+ 
                         <Frame
                             BackgroundColor="#D9D9D9"
                             CornerRadius="100"
+                            HorizontalOptions="FillAndExpand"
+                            Margin="10,20,10,20"
+                            Padding="0"
+                            HeightRequest="70"
+                            WidthRequest="400"
                             >
-                            <CollectionView 
-                                             ItemsLayout="HorizontalList"
-                                             ItemsSource="{Binding gg}"
-                             
-                                             HeightRequest="30"
-                                            >
-                                <CollectionView.ItemTemplate>
-                                    <DataTemplate 
-                                    >
+                            
+                            <HorizontalStackLayout  HorizontalOptions="Fill"  VerticalOptions="Fill">
+                                <StackLayout Orientation="Horizontal" 
+                                              HorizontalOptions="Start" >
+                                    <ImageButton Source="test.png" HeightRequest="30" WidthRequest="30" ></ImageButton>
+                                <ImageButton Source="polygon1.png" HeightRequest="20" WidthRequest="20" Margin="10,0,0,0" ></ImageButton>
+                                </StackLayout>
+                                <CollectionView 
+                                                 ItemsLayout="HorizontalList"
+                                                 ItemsSource="{Binding group}"
+                                   
+                             HorizontalOptions="StartAndExpand"
+                                                 HeightRequest="30"
+                                                >
+                                    <CollectionView.ItemTemplate>
+                                        <DataTemplate 
+                                        >
 
 
-                                        <StackLayout
-                                       VerticalOptions="Center"
-                                        HorizontalOptions="Start"
-                                       >
-                                            <Label Text="test" Margin="5,0,0,0" FontSize="20"
-                                                          ></Label>
-                                        </StackLayout>
+                                            <StackLayout
+                                           VerticalOptions="Center"
+                                            HorizontalOptions="Start"
+                                           >
+                                                <Label Text="{Binding groupName}" Margin="5,0,0,0" FontSize="20"
+                                                              ></Label>
+                                            </StackLayout>
 
 
 
-                                    </DataTemplate>
-                                </CollectionView.ItemTemplate>
-                            </CollectionView>
+                                        </DataTemplate>
+                                    </CollectionView.ItemTemplate>
+                                </CollectionView>
 
+                                
+
+
+                            </HorizontalStackLayout>
+                          
                         </Frame>
-                        <StackLayout Orientation="Horizontal" >
-                        <ImageButton Source="test.png" HeightRequest="30" WidthRequest="30"></ImageButton>
-                        <ImageButton Source="polygon1.png" HeightRequest="20" WidthRequest="20" Margin="320,0,0,0"></ImageButton>
-                        </StackLayout>
-                    </StackLayout>
-                </StackLayout>
+                     
+            
+         
 
-            </StackLayout>
             <StackLayout>
                 <Label Text="Kelime Grupları" HorizontalOptions="Start" FontFamily="Inter-ExtraBold" FontSize="28" Margin="5,0,0,0"></Label>
             </StackLayout>
@@ -102,8 +126,8 @@
                     
                     <CollectionView 
                                      ItemsLayout="VerticalGrid, 3"
-                                     ItemsSource="{Binding gg}"
-                                    
+                                     ItemsSource="{Binding group}"
+                                    SelectionMode="Single"
                                  
                                      >
                         
@@ -123,8 +147,8 @@
                                            CornerRadius="25">
                                         <StackLayout
                                             >
-                                            <Image Source="rectangle1.png" WidthRequest="40" HeightRequest="40" ></Image>
-                                            <Label Text="test" Margin="18,0,0,0"></Label>
+                                            <Image Source="{Binding groupIMGName}" WidthRequest="40" HeightRequest="40" ></Image>
+                                    <Label Text="{Binding groupName}" Margin="18,0,0,0"></Label>
 
                                         </StackLayout>
 
@@ -136,16 +160,6 @@
 
              
             </ScrollView>
-
-
-
-
-
-
-
-
-
-
 
 
 
