--- a/Talkative/Source/Pages/GroupCreatePage.xaml
+++ b/Talkative/Source/Pages/GroupCreatePage.xaml
@@ -5,10 +5,63 @@
              Title="GroupCreatePage"
               xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="Automatic">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <ContentPage.Content>
+
+        <StackLayout BackgroundColor="WhiteSmoke" >
+
+            <StackLayout
+               
+                Orientation="Horizontal"
+                BackgroundColor="#686DE0"
+                VerticalOptions="Start"
+                
+               >
+
+                <Image
+                        Source="home.png"
+                          WidthRequest="30"
+                          HeightRequest="30"
+                         HorizontalOptions="Start"
+                         Margin="10,10,10,10"
+                        >
+                </Image>
+                <Label
+                        Text="Grup Ekle"
+                        HorizontalOptions="Start"
+                        VerticalOptions="Center"
+                        Margin="10,0,0,0"
+                        FontFamily="Inter-ExtraBold"
+                        FontSize="Large"
+                        TextColor="WhiteSmoke">
+
+                </Label>
+
+              
+
+
+
+            </StackLayout>
+
+            <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" >
+                <Image Source="{Binding SelectedImage}" />
+                <Entry Text="{Binding GroupName}" Placeholder="Grup ismi Girin" FontFamily="Inter-ExtraBold" HorizontalOptions="Center" VerticalOptions="Center" TextColor="Black"></Entry>
+                <Line BackgroundColor="Black" WidthRequest="300" HeightRequest="2"></Line>
+               
+                <Button CornerRadius="100" WidthRequest="200" HeightRequest="40" Text="Resim Seç" TextColor="White"  FontFamily="Inter-ExtraBold" BackgroundColor="#30336B" Command="{Binding SelectImage}"></Button>
+                <Button CornerRadius="100" WidthRequest="200" HeightRequest="40" Text="Grubu Ekle" TextColor="White"  FontFamily="Inter-ExtraBold" BackgroundColor="#30336B" Margin="0,10,0,0"  Command="{Binding AddGroup}"></Button>
+             
+                
+            </StackLayout>
+
+
+
+
+
+
+
+        </StackLayout>
+        
+    </ContentPage.Content>
+    
 </ContentPage>
