--- a/Talkative/Source/Pages/GroupCreatePage.xaml
+++ b/Talkative/Source/Pages/GroupCreatePage.xaml
@@ -47,8 +47,8 @@
                 <Image Source="{Binding SelectedImage}" />
                 <Entry Text="{Binding GroupName}" Placeholder="Grup ismi Girin" FontFamily="Inter-ExtraBold" HorizontalOptions="Center" VerticalOptions="Center" TextColor="Black"></Entry>
                 <Line BackgroundColor="Black" WidthRequest="300" HeightRequest="2"></Line>
-               
-                <Button CornerRadius="100" WidthRequest="200" HeightRequest="40" Text="Resim Seç" TextColor="White"  FontFamily="Inter-ExtraBold" BackgroundColor="#30336B" Command="{Binding SelectImage}"></Button>
+
+                <Button CornerRadius="100" WidthRequest="200" HeightRequest="40" Text="Resim Seç" TextColor="White"  FontFamily="Inter-ExtraBold" BackgroundColor="#30336B" Command="{Binding SelectImage}" Margin="0,10,0,0"></Button>
                 <Button CornerRadius="100" WidthRequest="200" HeightRequest="40" Text="Grubu Ekle" TextColor="White"  FontFamily="Inter-ExtraBold" BackgroundColor="#30336B" Margin="0,10,0,0"  Command="{Binding AddGroup}"></Button>
              
                 
