--- a/Talkative/Source/Pages/GroupsPage.xaml
+++ b/Talkative/Source/Pages/GroupsPage.xaml
@@ -10,16 +10,18 @@
              xmlns:CustomStackLayout ="clr-namespace:Talkative.Source.CustomControls"
              >
     
-    <ContentPage.Content>
+        
 
-       
-
-
-        <StackLayout>
+                <ContentPage.Content>
 
 
 
-            <StackLayout
+
+                    <StackLayout>
+
+
+
+                        <StackLayout
                
                 Orientation="Horizontal"
                 BackgroundColor="#686DE0"
@@ -27,15 +29,15 @@
                 
                >
 
-                <Image
+                            <Image
                         Source="home.png"
                           WidthRequest="30"
                           HeightRequest="30"
                          HorizontalOptions="Start"
                          Margin="10,10,10,10"
                         >
-                </Image>
-                <Label
+                            </Image>
+                            <Label
                         Text="ANA SAYFA"
                         HorizontalOptions="Start"
                         VerticalOptions="Center"
@@ -43,23 +45,23 @@
                         FontFamily="Inter-ExtraBold"
                         FontSize="Large"
                         TextColor="WhiteSmoke">
-                    
-                </Label>
-              
-                <Button
+
+                            </Label>
+
+                            <Button
                     Text="Grup Ekle"
                     HeightRequest="40"
                     CornerRadius="100"
                     HorizontalOptions="EndAndExpand"
                     Command="{Binding GoGroupCreatePage}">
-                    
-                </Button>
+
+                            </Button>
 
 
 
-            </StackLayout>
-            
- 
+                        </StackLayout>
+
+
                         <Frame
                             BackgroundColor="#D9D9D9"
                             CornerRadius="100"
@@ -69,114 +71,89 @@
                             HeightRequest="70"
                             WidthRequest="400"
                             >
-                            
+
                             <HorizontalStackLayout  HorizontalOptions="Fill"  VerticalOptions="Fill">
                                 <StackLayout Orientation="Horizontal" 
                                               HorizontalOptions="Start" >
                                     <ImageButton Source="test.png" HeightRequest="30" WidthRequest="30" ></ImageButton>
-                                <ImageButton Source="polygon1.png" HeightRequest="20" WidthRequest="20" Margin="10,0,0,0" ></ImageButton>
+                                    <ImageButton Source="polygon1.png" HeightRequest="20" WidthRequest="20" Margin="10,0,0,0" ></ImageButton>
                                 </StackLayout>
-                                <CollectionView 
-                                                 ItemsLayout="HorizontalList"
-                                                 HorizontalOptions="StartAndExpand"
-                                                 HeightRequest="30"
-                                                
-                                                
-                                                 
-                                                >
-                        
-                                    <CollectionView.ItemTemplate>
-                                        <DataTemplate 
-                                        >
 
 
-                                            <StackLayout
-                                           VerticalOptions="Center"
-                                            HorizontalOptions="Start"
-                                           >
-                                             
-                                            </StackLayout>
-
-
-
-                                        </DataTemplate>
-                                    </CollectionView.ItemTemplate>
-                                </CollectionView>
-
-                                
 
 
                             </HorizontalStackLayout>
-                          
+
                         </Frame>
-                     
-            
-         
 
-            <StackLayout>
-                <Label Text="Kelime Grupları" HorizontalOptions="Start" FontFamily="Inter-ExtraBold" FontSize="28" Margin="5,0,0,0"></Label>
-            </StackLayout>
 
-           
 
-            <ScrollView 
-                       VerticalScrollBarVisibility="Always"
-                        
-                        
-                        >
-                
 
-              
-                    
-                    <CollectionView 
+                        <StackLayout>
+                            <Label Text="Kelime Grupları" HorizontalOptions="Start" FontFamily="Inter-ExtraBold" FontSize="28" Margin="5,0,0,0"></Label>
+                        </StackLayout>
+
+
+
+
+
+
+                        <CollectionView 
                                      ItemsLayout="VerticalGrid, 3"
                                      ItemsSource="{Binding group}"
                                     SelectionMode="Single"
                                     SelectedItem="{Binding GroupSlector}"
-                                    SelectionChangedCommand="{Binding GDetailCommand}"
+                                   
                                   
                                      >
-                    
 
 
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate>
+                            <CollectionView.ItemTemplate>
+
+                                <DataTemplate>
 
 
 
-
-                            <CustomStackLayout:CustomStackLayout BackgroundColor="#D9D9D9"  Padding="10" Margin="10" HeightRequest="120"
+                                    <CustomStackLayout:CustomStackLayout BackgroundColor="#D9D9D9"  Padding="10" Margin="10" HeightRequest="120"
                                            CornerRadius="25"
+                                                                 
                                              >
+                                        <CustomStackLayout:CustomStackLayout.GestureRecognizers>
+                                            <TapGestureRecognizer  Command="{Binding Path=BindingContext.GadDetailCommand, Source={x:Reference GroupPageView}}" CommandParameter="{Binding .}"></TapGestureRecognizer>
+                                        </CustomStackLayout:CustomStackLayout.GestureRecognizers>
 
-                                        
+
 
 
                                         <Image Source="{Binding ImageSource}" WidthRequest="70" HeightRequest="70" ></Image>
-                                           <Label FontSize="18" Text="{Binding groupName}"  HorizontalOptions="Center"></Label>
+                                        <Label FontSize="18" Text="{Binding groupName}"  HorizontalOptions="Center"></Label>
 
-                                    
+
 
                                     </CustomStackLayout:CustomStackLayout>
 
-                           
 
-                        </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                   
-                   
-                </CollectionView>
 
-             
-            </ScrollView>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+
+
+                        </CollectionView>
 
 
 
 
-        </StackLayout>
-        
-    </ContentPage.Content>
- 
+
+
+
+                    </StackLayout>
+
+                </ContentPage.Content>
+
+
+     
+    
+   
 </ContentPage>
 
     
