--- a/Talkative/Source/Pages/WordsPage.xaml
+++ b/Talkative/Source/Pages/WordsPage.xaml
@@ -4,8 +4,11 @@
              x:Class="Talkative.Source.Pages.WordsPage"
              Title="WordsPage"
                xmlns:prism="http://prismlibrary.com"
-             prism:ViewModelLocator.AutowireViewModel="Automatic">
-    
+             prism:ViewModelLocator.AutowireViewModel="Automatic"
+               x:Name="GroupPageView"
+             xmlns:CustomStackLayout ="clr-namespace:Talkative.Source.CustomControls">
+
+
     <ContentPage.Content>
 
 
@@ -23,16 +26,17 @@
                 
                >
 
-                <Image
-                        Source="wordofmouth.png"
+                <ImageButton
+                        Source="arrow.png"
                           WidthRequest="30"
                           HeightRequest="30"
                          HorizontalOptions="Start"
                          Margin="10,10,10,10"
+                    Command="{Binding GoBack}"
                         >
-                </Image>
+                </ImageButton>
                 <Label
-                        Text="ANA SAYFA"
+                        Text="{Binding GrupPageName}"
                         HorizontalOptions="Start"
                         VerticalOptions="Center"
                         Margin="10,0,0,0"
@@ -74,10 +78,9 @@
                     </StackLayout>
                     <CollectionView 
                                                  ItemsLayout="HorizontalList"
-                                                 ItemsSource="{Binding group}"
                                                  HorizontalOptions="StartAndExpand"
                                                  HeightRequest="30"
-                                                 SelectionMode="Single"
+                                                
                                                 
                                                  
                                                 >
@@ -91,8 +94,7 @@
                                            VerticalOptions="Center"
                                             HorizontalOptions="Start"
                                            >
-                                    <Label Text="{Binding groupName}" Margin="5,0,0,0" FontSize="20"
-                                                              ></Label>
+
                                 </StackLayout>
 
 
@@ -128,34 +130,41 @@
 
                 <CollectionView 
                                      ItemsLayout="VerticalGrid, 3"
-                                     ItemsSource="{Binding group}"
-                                     SelectedItem="{Binding GroupSlector}"
+                                     ItemsSource="{Binding word}"
+                                    SelectionMode="Single"
+                                    SelectedItem="{Binding WordSlector}"
+                                    SelectionChangedCommand="{Binding GetWord}"
+                                  
                                      >
 
 
-                    <CollectionView.GestureRecognizers>
 
-                        <TapGestureRecognizer Command="{Binding GroupDetailCommand}" NumberOfTapsRequired="1" CommandParameter="{Binding .}">
-
-                        </TapGestureRecognizer>
-
-                    </CollectionView.GestureRecognizers>
                     <CollectionView.ItemTemplate>
-                        <DataTemplate >
+                        <DataTemplate>
 
-                            <Frame BackgroundColor="#D9D9D9"
-                                         WidthRequest="120"
-                                           Margin="0,18,0,0"
-                                           CornerRadius="25">
-                                <StackLayout>
-                                    <Image Source="{Binding ImageSource}" WidthRequest="70" HeightRequest="70" ></Image>
-                                    <Label FontSize="18" Text="{Binding groupName}" HorizontalOptions="Center"></Label>
-                                </StackLayout>
 
-                            </Frame>
+
+
+                            <CustomStackLayout:CustomStackLayout BackgroundColor="#D9D9D9"  Padding="10" Margin="10" HeightRequest="120"
+                                           CornerRadius="25"
+                                             >
+
+
+
+
+                                <Image Source="{Binding ImageSource}" WidthRequest="70" HeightRequest="70" ></Image>
+                                <Label FontSize="18" Text="{Binding Word}"  HorizontalOptions="Center"></Label>
+
+
+
+                            </CustomStackLayout:CustomStackLayout>
+
+
 
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
+
+
                 </CollectionView>
 
 
@@ -167,4 +176,7 @@
         </StackLayout>
 
     </ContentPage.Content>
+
 </ContentPage>
+
+    
