--- a/Talkative/Source/Pages/WordsPage.xaml
+++ b/Talkative/Source/Pages/WordsPage.xaml
@@ -5,7 +5,7 @@
              Title="WordsPage"
                xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="Automatic"
-               x:Name="GroupPageView"
+               x:Name="WordPageView"
              xmlns:CustomStackLayout ="clr-namespace:Talkative.Source.CustomControls">
 
 
@@ -149,7 +149,9 @@
                                            CornerRadius="25"
                                              >
 
-
+                                <CustomStackLayout:CustomStackLayout.GestureRecognizers>
+                                    <TapGestureRecognizer  Command="{Binding Path=BindingContext.GetWordsForSoundAndList, Source={x:Reference WordPageView}}" CommandParameter="{Binding .}"></TapGestureRecognizer>
+                                </CustomStackLayout:CustomStackLayout.GestureRecognizers>
 
 
                                 <Image Source="{Binding ImageSource}" WidthRequest="70" HeightRequest="70" ></Image>
