biraz buglu ama müq

--- a/Talkative/Source/Pages/WordsPage.xaml
+++ b/Talkative/Source/Pages/WordsPage.xaml
@@ -54,6 +54,14 @@
                     Command="{Binding GoWordCreatePage}">
 
                 </Button>
+                <Button
+                    Text="Kelime Sil"
+                    HeightRequest="40"
+                    CornerRadius="100"
+                    
+                    Command="{Binding GoWordDeletePage}">
+
+                </Button>
 
 
 
