--- a/Talkative/Source/Pages/GroupDeletePageV2.xaml
+++ b/Talkative/Source/Pages/GroupDeletePageV2.xaml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Talkative.Source.Pages.GroupDeletePage"
-             Title="GroupDeletePage"
+             x:Class="Talkative.Source.Pages.GroupDeletePageV2"
+             Title="GroupDeletePageV2"
               x:Name="GroupDeleteView"
               xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="Automatic">
-    
+
     <ContentPage.Content>
 
         <StackLayout BackgroundColor="WhiteSmoke" >
@@ -19,7 +19,7 @@
                 
                >
 
-               
+
                 <Label
                         Text="Grup Sil"
                         HorizontalOptions="Start"
@@ -58,20 +58,20 @@
                             <Grid BackgroundColor="White"
                       Padding="10">
                                 <StackLayout>
-                                <Label Text="{Binding groupName}" Margin="10" FontSize="26" FontFamily="Inter-ExtraBold" TextColor="Black"></Label>
+                                    <Label Text="{Binding groupName}" Margin="10" FontSize="26" FontFamily="Inter-ExtraBold" TextColor="Black"></Label>
                                     <Label Text="Silmek için Sağa kaydırın "></Label>
                                 </StackLayout>
-                                
+
                             </Grid>
-                            
+
                         </SwipeView>
                     </DataTemplate>
-                    
-                    
+
+
                 </CollectionView.ItemTemplate>
-                
-                
-                
+
+
+
             </CollectionView>
 
 
@@ -83,5 +83,4 @@
         </StackLayout>
 
     </ContentPage.Content>
-
 </ContentPage>
