--- a/Talkative/Source/Pages/WordDeletePage.xaml
+++ b/Talkative/Source/Pages/WordDeletePage.xaml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Talkative.Source.Pages.GroupDeletePage"
-             Title="GroupDeletePage"
-              x:Name="GroupDeleteView"
+             x:Class="Talkative.Source.Pages.WordDeletePage"
+             Title="WordDeletePage" 
+             x:Name="WordDeleteView"
               xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="Automatic">
-    
+
     <ContentPage.Content>
 
         <StackLayout BackgroundColor="WhiteSmoke" >
@@ -19,9 +19,9 @@
                 
                >
 
-               
+
                 <Label
-                        Text="Grup Sil"
+                        Text="Kelime Sil"
                         HorizontalOptions="Start"
                         VerticalOptions="Center"
                         Margin="10,0,0,0"
@@ -38,7 +38,7 @@
             </StackLayout>
 
             <CollectionView
-                ItemsSource="{Binding group}"
+                ItemsSource="{Binding word}"
                 SelectionMode="Single"
                 SelectedItem="{Binding GroupSlector}"
                 >
@@ -51,27 +51,27 @@
                                     <SwipeItem Text="Delete"
                                    IconImageSource="test.png"
                                    BackgroundColor="LightPink"
-                                   Command="{Binding Path=BindingContext.DeleteGroup, Source={x:Reference GroupDeleteView}}" CommandParameter="{Binding .}"
+                                   Command="{Binding Path=BindingContext.DeleteWord, Source={x:Reference WordDeleteView}}" CommandParameter="{Binding .}"
                                     />
                                 </SwipeItems>
                             </SwipeView.LeftItems>
                             <Grid BackgroundColor="White"
                       Padding="10">
                                 <StackLayout>
-                                <Label Text="{Binding groupName}" Margin="10" FontSize="26" FontFamily="Inter-ExtraBold" TextColor="Black"></Label>
+                                    <Label Text="{Binding Word}" Margin="10" FontSize="26" FontFamily="Inter-ExtraBold" TextColor="Black"></Label>
                                     <Label Text="Silmek için Sağa kaydırın "></Label>
                                 </StackLayout>
-                                
+
                             </Grid>
-                            
+
                         </SwipeView>
                     </DataTemplate>
-                    
-                    
+
+
                 </CollectionView.ItemTemplate>
-                
-                
-                
+
+
+
             </CollectionView>
 
 
@@ -83,5 +83,4 @@
         </StackLayout>
 
     </ContentPage.Content>
-
 </ContentPage>
